[project]
name = "tweet-digest"
version = "0.1.0"
description = "Tools for creating a daily digest from Twitter lists"
dependencies = []
requires-python = ">=3.11"

[project.scripts]
extract-links = "extract_links:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extract_links.py"]
